--- a/templates/base.html
+++ b/templates/base.html
@@ -44,42 +44,8 @@
             font-weight: bold;
         }
 
-        .navbar-toggler-icon {
-            filter: brightness(0) invert(1);
-        }
-
-        /* SIDEBAR */
-        .sidebar {
-            height: 100vh;
-            position: fixed;
-            top: 65px;
-            left: 0;
-            width: 60px;
-            background-color: #c62828;
-            padding-top: 20px;
-            border-right: 2px solid #8e0000;
-            text-align: center;
-            z-index: 1040;
-        }
-
-        .sidebar a {
-            color: #ffffff;
-            padding: 12px 0;
-            text-decoration: none;
-            display: block;
-            font-size: 22px;
-            transition: 0.2s ease-in-out;
-        }
-
-        .sidebar a:hover,
-        .sidebar a.active {
-            background-color: #8e0000;
-            border-left: 4px solid #ef5350;
-        }
-
         /* CONTENIDO */
         .content {
-            margin-left: 70px;
             padding: 20px;
         }
 
@@ -122,12 +88,8 @@
 
         /* RESPONSIVE */
         @media (max-width: 768px) {
-            .sidebar {
-                display: none;
-            }
-
-            .content {
-                margin-left: 0;
+            .navbar-nav {
+                flex-wrap: wrap;
             }
         }
     </style>
@@ -138,86 +100,38 @@
     <!-- NAVBAR SUPERIOR -->
     {% block menu %}
     <nav class="navbar fixed-top navbar-dark">
-        <div class="container-fluid">
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <a class="navbar-brand ms-3" href="#">
+        <div class="container-fluid flex-wrap gap-3">
+            <a class="navbar-brand" href="{% url 'home_ciudadano' %}">
                 {% if user.is_authenticated %}
                     Bienvenido {{ user.username }}
+                {% else %}
+                    Sistema de Monitoreo Municipal
                 {% endif %}
             </a>
-
-            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
-                <div class="offcanvas-header" style="background:#c62828;">
-                    <h5 class="text-white">Menú</h5>
-                    <button type="button" class="btn-close bg-light" data-bs-dismiss="offcanvas"></button>
-                </div>
-
-                <div class="offcanvas-body" style="background:#f4f4f4;">
-                    <ul class="navbar-nav">
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'home_ciudadano' %}">Inicio</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Recursos Multimedia</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Herramientas</a>
-                        </li>
-
-                        {% if user.is_authenticated and user.puede_gestionar_denuncias %}
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path|is_panel_denuncias %}active{% endif %}" href="{% url 'panel_denuncias' %}">Panel de denuncias</a>
-                        </li>
-                        {% endif %}
-
-                        <li class="nav-item">
-                            <a class="nav-link text-danger" href="{% url 'logout' %}">
-                                Cerrar Sesión
-                            </a>
-                        </li>
-
-                    </ul>
-                </div>
-            </div>
-
+            <ul class="navbar-nav flex-row align-items-center gap-3 ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'home_ciudadano' %}">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Recursos Multimedia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Herramientas</a>
+                </li>
+                {% if user.is_authenticated and user.puede_gestionar_denuncias %}
+                <li class="nav-item">
+                    <a class="nav-link text-white {% if request.path|is_panel_denuncias %}fw-bold{% endif %}" href="{% url 'panel_denuncias' %}">Panel de denuncias</a>
+                </li>
+                {% endif %}
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'logout' %}">Cerrar Sesión</a>
+                </li>
+                {% endif %}
+            </ul>
         </div>
     </nav>
     {% endblock menu %}
-
-    <!-- SIDEBAR LATERAL -->
-    {% block aside %}
-    <div class="sidebar">
-
-        <a href="{% url 'home_ciudadano' %}" class="{% if request.path == '/' or request.path|slice:":6" == '/home/' %}active{% endif %}" data-bs-toggle="tooltip" title="Inicio">
-            <i class='bx bx-home-alt'></i>
-        </a>
-
-
-
-        <a href="#" data-bs-toggle="tooltip" title="Herramientas">
-            <i class='bx bx-wrench'></i>
-        </a>
-
-        {% if user.is_authenticated and user.puede_gestionar_denuncias %}
-        <a href="{% url 'panel_denuncias' %}" class="{% if request.path|is_panel_denuncias %}active{% endif %}" data-bs-toggle="tooltip" title="Panel de denuncias">
-            <i class='bx bx-map-alt'></i>
-        </a>
-        {% endif %}
-
-        <a href="{% url 'logout' %}" data-bs-toggle="tooltip" title="Cerrar Sesión">
-            <i class='bx bx-log-out'></i>
-        </a>
-
-    </div>
-    {% endblock aside %}
 
     <!-- CONTENIDO CENTRAL -->
     <div class="content">
