--- a/templates/usuarios/perfil.html
+++ b/templates/usuarios/perfil.html
@@ -87,17 +87,15 @@
                         {% for field in user_form %}
                         <div class="col-12 col-md-6">
                             <label class="form-label perfil-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
-                            {% with base_class=field.field.widget.attrs.class|default:'' %}
-                                {% if field.errors %}
-                                    {% with error_class=base_class|add:' is-invalid' %}
-                                        {{ field.as_widget(attrs={'class': error_class}) }}
-                                    {% endwith %}
-                                {% else %}
-                                    {{ field }}
-                                {% endif %}
-                            {% endwith %}
                             {% if field.errors %}
-                                <div class="text-danger small mt-1">{{ field.errors|striptags }}</div>
+                                <div class="form-group has-error">
+                                    {{ field }}
+                                    <div class="invalid-feedback d-block">{{ field.errors.0 }}</div>
+                                </div>
+                            {% else %}
+                                <div class="form-group">
+                                    {{ field }}
+                                </div>
                             {% endif %}
                         </div>
                         {% endfor %}
