--- a/templates/base.html
+++ b/templates/base.html
@@ -128,6 +128,10 @@
                 </li>
                 {% if user.es_administrador %}
                 <li class="nav-item">
+                    <a class="nav-link text-white {% if request.path|startswith:"/panel/usuarios-sistema/" %}fw-bold{% endif %}"
+                       href="{% url 'usuarios_sistema' %}">Usuarios del Sistema</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'crear_funcionario' %}">Agregar funcionarios</a>
                 </li>
                 {% endif %}
