Add safe jefe assignment flow for fiscalizador panel

--- a/templates/denuncias/panel_funcionario.html
+++ b/templates/denuncias/panel_funcionario.html
@@ -693,6 +693,7 @@
 {% block extra_scripts %}
     {{ block.super }}
     {{ estados_config|json_script:"estados-config" }}
+    {{ jefes_cuadrilla|json_script:"jefes-cuadrilla-data" }}
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
     <script src="{% static 'js/panel_funcionario.js' %}"></script>
 {% endblock extra_scripts %}
