Refine denuncias panel cards

--- a/templates/denuncias/panel_funcionario.html
+++ b/templates/denuncias/panel_funcionario.html
@@ -652,6 +652,21 @@
 
     </div>
 
+    <!-- Modal para ampliar imagenes -->
+    <div class="modal fade" id="modalImagenDenuncia" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Imagen del caso</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body text-center">
+                    <img src="" alt="Vista ampliada de la denuncia" class="img-fluid rounded" data-imagen-ampliada>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Modal rechazo de denuncia -->
     <div class="modal fade" id="modalRechazoDenuncia" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
