--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="row justify-content-center">
-        <div class="col-md-5 auth-card">
+        <div class="col-md-4 col-lg-4 auth-card">
 
             <div class="auth-box">
 
